@@ -206,6 +206,7 @@ vpnEnableLCP=on
 vpnLCPFailure=5
 vpnLCPInterval=30
 vpnAuthProtocol=0
+vpnCpuLimit=3600
 vpnInterface=WAN
 vpnServer=192.168.200.1
 vpnService=
