@@ -455,6 +455,9 @@ enum
 #ifdef CONFIG_VLAN_8021Q_DOUBLE_TAG
 	NET_TCP_8021Q_DOUBLE_TAG=126,
 #endif
+#ifdef CONFIG_PPP_PREVENT_DROP_SESSION_ON_FULL_CPU_LOAD
+	NET_TCP_PPP_CPU_LOAD=127,
+#endif
 };
 
 enum {
